--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
 <div>
-   <a class="knopka" href="iron-man.html"><img  src="images/play.png" height="200px"></a> 
+   <a class="knopka" href="iron-man.html"><img  src="play.png" height="200px"></a> 
 </div>
 </body>
 </html>
